# anthropic-proxy-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yaml
src/: cli.rs  config.rs  error.rs  main.rs  proxy.rs  transform.rs
src/models/: anthropic.rs  openai.rs
